--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           </div> -->
           <p class="mb-5" style="font-size: 1.2em;">
             Hi there! 👋 I’m a PhD Candidate in the  <a href="https://cis.unimelb.edu.au/hci" style="color: #6158b0;">Human-Computer Interaction Group</a> at The University of Melbourne, 
-            under the supervision of <a href="https://www.jorgegoncalves.com/" style="color: #6158b0;">Assoc. Prof. Jorge Goncalves</a>, <a href="https://zhannina.github.io/about/" style="color: #6158b0;">Dr. Jarrod Knibble</a> and <a href="https://www.jarrodknibbe.info/" style="color: #6158b0;">Dr. Zhanna sarsenbayeva</a>.
+            under the supervision of <a href="https://www.jorgegoncalves.com/" style="color: #6158b0;">Assoc. Prof. Jorge Goncalves</a>, <a href="https://zhannina.github.io/about/" style="color: #6158b0;">Dr. Jarrod Knibbe</a> and <a href="https://www.jarrodknibbe.info/" style="color: #6158b0;">Dr. Zhanna Sarsenbayeva</a>.
          </br>
          </br>  My research encompasses the domains of human-computer interaction, social computing, and geo-location informatics. 
                 Especially, my research focuses on online communities such as social networking sites, 
