--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
           </div> -->
           <p class="mb-5" style="font-size: 1.2em;">
             Hi there! 👋 I’m a PhD Candidate in the  <a href="https://cis.unimelb.edu.au/hci" style="color: #6158b0;">Human-Computer Interaction Group</a> at The University of Melbourne, 
-            under the supervision of <a href="https://www.jorgegoncalves.com/" style="color: #6158b0;">Assoc. Prof. Jorge Goncalves</a>, <a href="https://zhannina.github.io/about/" style="color: #6158b0;">Dr. Jarrod Knibbe</a> and <a href="https://www.jarrodknibbe.info/" style="color: #6158b0;">Dr. Zhanna Sarsenbayeva</a>.
+            under the supervision of <a href="https://www.jorgegoncalves.com/" style="color: #6158b0;">Assoc. Prof. Jorge Goncalves</a>, <a href="https://www.jarrodknibbe.info/" style="color: #6158b0;">Dr. Jarrod Knibbe</a> and <a href="https://zhannina.github.io/about/" style="color: #6158b0;">Dr. Zhanna Sarsenbayeva</a>.
          </br>
          </br>  My research encompasses the domains of human-computer interaction, social computing, and geo-location informatics. 
                 Especially, my research focuses on online communities such as social networking sites, 
                 including the perception and behavior of individuals regarding their online privacy, 
-                strategies to combat misinformation and facilitate informed credibility decisions. designing novel interfaces to 
+                strategies to combat misinformation and facilitate informed credibility decisions, designing novel interfaces to 
                 enhance user experiences in online environments, etc. 
 
             </br> </br>
@@ -212,7 +212,7 @@
               <li> Social Media data analysis</li>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary"> From Nov 2023</span>
+              <span class="text-primary"> From Nov 2023 - Now</span>
             </div>
           </div>
           
@@ -413,12 +413,12 @@
               The 11th ICAN International Innovation and Entrepreneurship Competition Western Division 2017</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>nd</sup>
+              1<sup>st</sup>
               The 12th “NXP” Cup College Student Smart Car Competition Western Division 2017</li>
             <li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>st</sup>
+              2<sup>nd</sup>
               China Undergraduate Mathematical contest in Modeling Competition Shaanxi Division 2017</li>
       
           </ul>
