--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 
           <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-               People's Choice Best Poster - CIS Doctoral Colloquium 2024, The University of Melbourne 2024</li>
+               People's Choice Best Poster - CIS Doctoral Colloquium, The University of Melbourne 2023</li>
             <li>
             
             <li>
