--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
             Hi there! 👋 I’m a PhD Candidate in the  <a href="https://cis.unimelb.edu.au/hci" style="color: #6158b0;">Human-Computer Interaction Group</a> at The University of Melbourne, 
             under the supervision of <a href="https://www.jorgegoncalves.com/" style="color: #6158b0;">Assoc. Prof. Jorge Goncalves</a>, <a href="https://www.jarrodknibbe.info/" style="color: #6158b0;">Dr. Jarrod Knibbe</a> and <a href="https://zhannina.github.io/about/" style="color: #6158b0;">Dr. Zhanna Sarsenbayeva</a>.
          </br>
-         </br>  My research encompasses the domains of human-computer interaction, social computing, and geo-location informatics. 
+         </br>  My research encompasses the domains of human-computer interaction, social computing, LLM and geo-location informatics. 
                 Especially, my research focuses on online communities such as social networking sites, 
                 including the perception and behavior of individuals regarding their online privacy, 
-                strategies to combat misinformation and facilitate informed credibility decisions, designing novel interfaces to 
+                strategies to combat misinformation and facilitate informed credibility decisions, designing novel interventions & interfaces to 
                 enhance user experiences in online environments, etc. 
 
             </br> </br>
@@ -209,7 +209,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Graduate Researcher Academic Associate -  University of Melbourne</h3>
               <p>📍 Melbourne · Victoria · Australia </p>  
-              <li> Part Time.</li>
+              <li> 0.3 Full Time</li>
                <li> Academic Tutor: INFO90002 Database Systems & Information Modelling </li>
             </div>
             <div class="resume-date text-md-right">
@@ -238,7 +238,7 @@
               <li> Social Media data analysis</li>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary"> From Nov 2023 - Now</span>
+              <span class="text-primary"> From Nov 2023 - Feb 2024</span>
             </div>
           </div>
           
@@ -401,6 +401,8 @@
 
           <h3 class="mb-0">2024</h3>
           <li> <b>Ying Ma</b>, Cherie Mei Yee Sew, Zhanna Sarsenbayeva, Jarrod Knibbe, Jorge Goncalves (2024). Understanding Users' Perspectives on Location Privacy Management on Smartphones.  The ACM International Conference on Mobile Human-Computer Interaction (MobileHCI’2024).</li>
+          <li> <b>Ying Ma</b>, Zhanna Sarsenbayeva, Jarrod Knibbe, Jorge Goncalves (2024). Exploring the effects of location information on perceptions of news credibility and sharing intention.  International Journal of Human - Computer Studies (IJHCS).</li>
+  
          <li> Shiquan Zhang, <b>Ying Ma</b>, Le Fang, Hong Jia, Simon D'Alfonso, Vassilis Kostakos.s (2024). Enabling On-Device LLMs Personalization with Smartphone Sensing. Adjunct Proceedings of the 2024 ACM International Joint Conference on Pervasive and Ubiquitous Computing (UbiComp’2024).</li>
  
           <br>
