--- a/index.html
+++ b/index.html
@@ -412,8 +412,8 @@
  <h3 class="mb-0">Academic Service</h3>
           <li> <b>Social Media Chair:</b> MobileHCI 2024</li>
           <li> <b>Web Chair:</b> Augment Humans 2024</li>
-          <li> <b>Paper Reviewer:</b> CHI-LBW, CSCW, ISS, IDC, CUI, DIS, MobileHCI, INTERACT, UbiComp, ISWC</li>
-          <li> <b>Student Volunteer:</b> VIS 2023; MobileHCI 2024; Ubicomp2024</li>
+          <li> <b>Paper Reviewer:</b> CHI, CHI-LBW, CSCW, ISS, IDC, CUI, DIS, MobileHCI, INTERACT, UbiComp, ISWC</li>
+          <li> <b>Student Volunteer:</b> IEEE VIS 2023; MobileHCI 2024; Ubicomp 2024; Unimelb CIS-DC 2024</li>
         
 
           
