--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
           
           
  <h3 class="mb-0">Academic Service</h3>
-          <li> <b>Paper Associate Chair: </b> CSCW 2025 [Core A*] </li>
+          <li> <b>Paper Associate Chair: </b> CSCW 2025 </li>
           <li> <b>Social Media Chair:</b> MobileHCI 2024</li>
           <li> <b>Web Chair:</b> Augment Humans 2024</li>
           <li> <b>Paper Reviewer:</b> CHI, CHI-LBW, CHI-student desgin competition, CSCW, ISS, IDC, CUI, DIS, MobileHCI, INTERACT, UbiComp, ISWC</li>
