--- a/index.html
+++ b/index.html
@@ -409,7 +409,8 @@
 
            <h3 class="mb-0">2025</h3>
            <li> <b>Ying Ma</b>, Shiquan Zhang, Dongju Yang, Zhanna Sarsenbayeva, Jarrod Knibbe, Jorge Goncalves (2025). Raising Awareness of Location Information Vulnerabilities in Social Media Photos using LLMs. The ACM Conference on Human Factors in Computing Systems (CHI’2025)</li>
- 
+          <li>  Namrata Srivastava, Jennifer Healey, Rajiv Jain, Guanli Liu, <b>Ying Ma</b>, Borano Llana, Dragan Gasevic,Tilman Dingler, Shaun Wallace (2025). Priming at Scale: An Evaluation of Using AI to Generate Primes for Mobile Readers.  Extended Abstracts of the CHI Conference on Human Factors in Computing Systems (CHI EA'2025)</li>
+
           <br>
           
           
