--- a/index.html
+++ b/index.html
@@ -287,13 +287,16 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Academic Tutor -  University of Melbourne</h3>  
               <p>📍 Melbourne · Victoria · Australia </p>
+              
+              <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">      
               <b>INFO90002 Database Systems & Information Modelling</b> 
               <li> Delivered weekly tutorials, provided guidance on conceptual and logical data modelling, and offered feedback on student progress through weekly zoom consultations.</li>
               <li> Designed and administered assessments, including exams and assignments, to evaluate students' understanding of database concepts, SQL, and data modelling principles.</li>
      
-            </div>
+            </div> </div> </div>
             <div class="resume-date text-md-right">
-            <span class="text-primary"> 2024 semester 2 & 2025 semester 1</span>
+            <span class="text-primary"> From 2022 July - Now</span>
             </div>
           </div>
 
