--- a/index.html
+++ b/index.html
@@ -248,9 +248,11 @@
              <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Graduate Researcher Academic Associate -  University of Melbourne</h3>
-              <p>📍 Melbourne · Victoria · Australia </p>  
-              <li> 0.3 Full Time</li>
-               <li> Academic Tutor: INFO90002 Database Systems & Information Modelling </li>
+              <p>📍 Melbourne · Victoria · Australia  &nbsp; 👩‍💻 0.3 FTE</p>
+               <li> Tutoring </li>
+               <li> Regular consultation with students</li>
+               <li> Assessment </li>
+                <li>Teaching-related management and administration </li>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary"> From July 2024 - Now</span>
