--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
 
     <title>Ying Ma - PhD Candidate</title>
-    <link rel="icon" type="image/png" href="img/ying_proflie.png">
+    <link rel="icon" type="image/png" href="img/ying.png">
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
