--- a/index.html
+++ b/index.html
@@ -146,7 +146,11 @@
           <h2 class="mb-5"> 📖 Publications</h2>
 
            <h3 class="mb-0">2025</h3>
-           <li> <b>Ying Ma</b>, Shiquan Zhang, Dongju Yang, Zhanna Sarsenbayeva, Jarrod Knibbe, Jorge Goncalves (2025). <u>Raising Awareness of Location Information Vulnerabilities in Social Media Photos using LLMs. </u>The ACM Conference on Human Factors in Computing Systems (<b><i>CHI’2025</i></b>)</li>
+           <li> <b>Ying Ma</b>, Shiquan Zhang, Dongju Yang, Zhanna Sarsenbayeva, Jarrod Knibbe, Jorge Goncalves (2025). <u>Raising Awareness of Location Information Vulnerabilities in Social Media Photos using LLMs. </u>The ACM Conference on Human Factors in Computing Systems (<b><i>CHI’2025</i></b>)
+            <a href="pdf/main.pdf" target="_blank">
+              <i class="fas fa-file-pdf"></i>
+          </a>
+          </li>
            <br> <li>Namrata Srivastava, Jennifer Healey, Rajiv Jain, Guanli Liu, <b>Ying Ma</b>, Borano Llana, Dragan Gasevic,Tilman Dingler, Shaun Wallace (2025). <u>Priming at Scale: An Evaluation of Using AI to Generate Primes for Mobile Readers. </u> Extended Abstracts of the CHI Conference on Human Factors in Computing Systems (<b><i>CHI LBW'2025</i></b>)</li>
 
           <br>
